--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,8 +8,8 @@
     <div class="hdr">
         <h1>ZSU Random</h1>
         <ul class="nav">
-            <li><a href="/" class="fstlink">HOME</a></li>
-            <li><a href="/about" class="sndlink">ABOUT</a></li>
+            <li><a href="/" class="act">HOME</a></li>
+            <li><a href="/about">ABOUT</a></li>
         </ul>
     </div>
 
