--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,13 +23,14 @@ body {
 }
 
 h1 {
-    font-family: 'Baskerville Old Face', 'Baskerville', 'Times New Roman', 'Times', 'Serif';
-    color: #cb1f1d;
+    font-family: 'Baskerville Old Face', 'Baskerville', 'Garamond', 'Times New Roman', 'Times';
     font-style: italic;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 0px;
-    font-size: 25px;
+    /* text-transform: uppercase; */
+    font-weight: normal;
+    font-size: 20px;
 }
 
 p {
