--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>ZSU Imgur</title>
+    <title>ZSU Moodboard</title>
 </head>
 <body>
     <div class="hdr">
-        <h1>ZSU Random</h1>
+        <h1>ZSU Moodboard</h1>
         <ul class="nav">
             <li><a href="/" class="act">HOME</a></li>
             <li><a href="/about">ABOUT</a></li>
