Added jQuery to load images when reaching the bottom of page, moved API call to client side

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>ZSU Moodboard</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <title>Imgur App 2.0</title>
 </head>
 <body>
     <div class="hdr">
@@ -13,7 +14,9 @@
         </ul>
     </div>
 
-    {{{images}}}
+    <div class="left"></div>
+    <div class="right"></div>
 
+    <script type="text/javascript" src="js/imgs.js"></script>
 </body>
 </html>
